--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && echo 'Lint complete.'",
+    "format": "prettier '**/*.{js,jsx,ts,tsx,css,scss,md}' --write --list-different",
+    "test": "jest"
   },
   "dependencies": {
     "next": "10.2.3",
@@ -13,7 +16,18 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/react": "17.0.11",
-    "typescript": "4.3.2"
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.4",
+    "start-server-and-test": "^1.12.5",
+    "typescript": "^4.3.2"
   }
 }
