--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.0.4",
+    "prettier": "^2.3.1",
     "start-server-and-test": "^1.12.5",
     "typescript": "^4.3.2"
   }
