--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/node": "^15.12.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.22.1",
     "downshift": "^6.1.3",
     "next": "10.2.3",
     "react": "17.0.2",
@@ -30,6 +31,7 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@testing-library/react": "^11.2.7",
+    "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.23",
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
