--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.23",
