--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/node": "^15.12.2",
+    "@types/reach__router": "^1.3.8",
     "classnames": "^2.2.6",
     "date-fns": "^2.22.1",
     "downshift": "^6.1.3",
