--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,9 @@
     "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "typeRoots": [
+    "../node_modules/@types",
+    "../types"
+  ]
 }
