--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
   "typeRoots": [
-    "../node_modules/@types",
-    "../types"
+    "./typings",
+    "./node_modules/@types/"
   ]
 }
