--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-beforeunload": "^2.5.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^6.15.5",
+    "react-pdf": "^5.3.0",
     "uk-postcode-validator": "^1.1.1"
   },
   "devDependencies": {
