--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx && echo 'Lint complete.'",
-    "format": "prettier '**/*.{js,jsx,ts,tsx,css,scss,md}' --write --list-different",
+    "format": "prettier **/*.{js,jsx,ts,tsx,css,scss,md} --write --list-different",
     "type-check": "tsc",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
