--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,5 @@
     "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"],
-  "typeRoots": [
-    "./typings",
-    "./node_modules/@types/"
-  ]
+  "exclude": ["node_modules"]
 }
