--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "downshift": "^6.1.3",
     "next": "10.2.3",
     "react": "17.0.2",
+    "react-beforeunload": "^2.5.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^6.15.5",
     "uk-postcode-validator": "^1.1.1"
@@ -36,6 +37,7 @@
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
@@ -43,7 +45,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "mockdate": "^3.0.5",
     "prettier": "^2.3.1",
     "start-server-and-test": "^1.12.5",
     "typescript": "^4.3.2"
