--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
     "downshift": "^6.1.3",
+    "lbh-frontend": "^3.5.3",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-beforeunload": "^2.5.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^6.15.5",
     "react-pdf": "^5.3.0",
+    "react-uuid": "^1.0.2",
+    "sass": "^1.35.1",
     "uk-postcode-validator": "^1.1.1"
   },
   "devDependencies": {
@@ -36,6 +39,7 @@
     "@testing-library/react": "^11.2.7",
     "@types/jest": "^26.0.23",
     "@types/react": "17.0.11",
+    "@types/react-pdf": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^26.6.3",
