--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "@types/node": "^15.12.2",
     "classnames": "^2.3.1",
+    "cookie": "^0.4.0",
     "date-fns": "^2.22.1",
     "downshift": "^6.1.3",
+    "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "lbh-frontend": "^3.5.3",
     "next": "10.2.3",
     "react": "17.0.2",
@@ -37,7 +40,9 @@
     "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
+    "@types/cookie": "^0.4.0",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/react": "17.0.11",
     "@types/react-csv": "^1.1.1",
     "@types/react-pdf": "^5.0.4",
