--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "react-hook-form": "^6.15.5",
     "react-pdf": "^5.3.0",
     "react-uuid": "^1.0.2",
+    "restana": "^4.9.1",
+    "serve-static": "^1.14.1",
+    "serverless-http": "^2.7.0",
     "sass": "^1.35.1",
     "uk-postcode-validator": "^1.1.1"
   },
