--- a/package.json
+++ b/package.json
@@ -1,59 +1,87 @@
 {
-  "name": "lbh-electoral-register-frontend",
+  "name": "lbh-social-care",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && echo 'Lint complete.'",
-    "format": "prettier **/*.{js,jsx,ts,tsx,css,scss,md} --write --list-different",
-    "type-check": "tsc",
+    "build": "next build && next export",
+    "prestart": "next build && next export",
+    "start": "next start -p $PORT",
     "test": "jest",
+    "lint": "eslint . --ext .js,.jsx && echo 'Lint complete.'",
+    "format": "prettier '**/*.{js,jsx,css,scss,md}' --write --list-different",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "prestorybook": "cpx \"node_modules/govuk-frontend/govuk/assets/**/*\" assets",
+    "e2e": "PORT=3000 start-server-and-test start http://localhost:3000 cy:run",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open"
   },
   "dependencies": {
-    "@types/node": "^15.12.2",
-    "classnames": "^2.3.1",
+    "axios": "^0.21.0",
+    "cookie": "^0.4.1",
     "date-fns": "^2.22.1",
-    "downshift": "^6.1.3",
+    "deepmerge": "^4.2.2",
+    "govuk-frontend": "^3.9.1",
+    "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "lbh-frontend": "^3.5.3",
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^6.15.5",
+    "next": "^10.0.5",
+    "next-seo": "^4.14.0",
+    "react": "^16.14.0",
+    "react-beforeunload": "^2.3.0",
+    "react-dom": "^16.14.0",
+    "react-hook-form": "^6.9.5",
     "react-pdf": "^5.3.0",
     "react-uuid": "^1.0.2",
-    "sass": "^1.35.1",
-    "uk-postcode-validator": "^1.1.1"
+    "restana": "^4.3.4",
+    "serve-static": "^1.14.1",
+    "serverless-http": "^2.4.1",
+    "uk-postcode-validator": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/react": "^6.2.9",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@types/jest": "^26.0.23",
-    "@types/react": "17.0.11",
-    "@types/react-pdf": "^5.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.2",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "mockdate": "^3.0.5",
-    "prettier": "^2.3.1",
-    "start-server-and-test": "^1.12.5",
-    "typescript": "^4.3.2"
+    "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-essentials": "^6.0.27",
+    "@storybook/addon-links": "^6.0.27",
+    "@storybook/react": "^6.0.27",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.1",
+    "babel-loader": "^8.1.0",
+    "cpx": "^1.5.0",
+    "css-loader": "^5.0.0",
+    "cypress": "^5.6.0",
+    "cypress-dotenv": "^1.2.2",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "http-proxy-middleware": "^1.0.6",
+    "husky": "^4.3.5",
+    "jest": "^26.6.1",
+    "lint-staged": ">=10",
+    "prettier": "^2.1.2",
+    "prop-types": "^15.7.2",
+    "react-is": "^16.13.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.4",
+    "start-server-and-test": "^1.11.5",
+    "style-loader": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "@babel/core": "^7.12.3",
+    "typescript": "^4.0.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit--no-verify": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": "eslint --fix",
+    "**/*.{js,jsx,css,scss,md}": "prettier --write --list-different"
   }
 }
