--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lbh-frontend": "^3.5.3",
     "next": "10.2.3",
     "react": "17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^6.15.5",
     "react-pdf": "^5.3.0",
