--- a/serverless.yml
+++ b/serverless.yml
@@ -38,7 +38,7 @@ functions:
     environment:
       GSSO_URL: ${ssm:/lbh-electoral-register/${self:provider.stage}/gsso-url}
       GSSO_TOKEN_NAME: ${ssm:/lbh-electoral-register/${self:provider.stage}/gsso-token-name}
-      HACKNEY_JWT_SECRET: ${ssm:/lbh-electoral-register/${self:provider.stage}/hackney-jwt-secret}
+      HACKNEY_JWT_SECRET: ${ssm:/lbh-electoral-register/${self:provider.stage}/hackney-jwt-secret~true}
       AUTHORISED_GROUP: ${ssm:/lbh-electoral-register/${self:provider.stage}/authorised-group}
       REDIRECT_URL: ${ssm:/lbh-electoral-register/${self:provider.stage}/redirect-url}
 resources:
@@ -81,6 +81,12 @@ resources:
                 HTTPPort: 80
                 HTTPSPort: 443
                 OriginProtocolPolicy: https-only
+    LambdaSecurityGroup:
+          Type: "AWS::EC2::SecurityGroup"
+          Properties:
+            GroupName: ${self:service}-${self:provider.stage}-lambda
+            GroupDescription: Allow all outbound traffic, no inbound
+            VpcId: ${self:custom.vpcs.${self:provider.stage}}
 
 custom:
   domain-name:
@@ -93,11 +99,13 @@ custom:
   aliases:
     staging: electoral-register-staging.hackney.gov.uk
   certificate-arn:
-    staging: arn:aws:acm:us-east-1:715003523189:certificate/8f7fa30c-a4e5-4775-b827-ade824a33c9a
+    staging: arn:aws:acm:us-east-1:645508685372:certificate/c81aa9d7-4c96-4b8b-a971-5c9eb5376174
   securityGroups:
     staging:
-      - sg-0d9f32775410e6d00
+      - Ref: LambdaSecurityGroup
   subnets:
     staging:
       - subnet-0da40e73f58096370
       - subnet-0a9971ade82211dfa
+  vpcs:
+    staging: vpc-0b76be2aa7f71c7d2
