--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/node": "^15.12.2",
+    "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
     "cookie": "^0.4.0",
     "date-fns": "^2.22.1",
@@ -30,9 +31,9 @@
     "react-pdf": "^5.3.0",
     "react-uuid": "^1.0.2",
     "restana": "^4.9.1",
+    "sass": "^1.35.1",
     "serve-static": "^1.14.1",
     "serverless-http": "^2.7.0",
-    "sass": "^1.35.1",
     "uk-postcode-validator": "^1.1.1"
   },
   "devDependencies": {
