--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,7 @@ BYPASS_AUTHENTICATION=
 # The URL for the authentication service at Hackney
 GSSO_URL=
 
-# The local storage key name where the authentication JWT should be stored
+# The name of the cookie where the authentication JWT is stored
 GSSO_TOKEN_NAME=
 
 # The shared secret used for validating the JWT
@@ -13,5 +13,5 @@ HACKNEY_JWT_SECRET=
 # The name of the Google Group to be given access to the app
 AUTHORISED_GROUP=
 
-# The URL to redirect to post-authentication
+# The base URL of the app
 REDIRECT_URL=
